-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 051102) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??112002 (v2.2.0-pre5)
	- added: ecasound emacs interface, ecasound.el, is now 
	   	 distributed with ecasound (ecatools/ecasound.el);
		 ecasound.el is installed to ecasound's data 
		 directory (default /usr/local/share/ecasound)
	- added: libkvutils_tester, unit tester for libkvutils
	- added: ecamonitor - 'q' to quit
	- changed: rpm spec file unified with the spec file used
		   to build PlanetCCRMA's ecasound packages
	- changed: pyecasound license from GPL to LGPL
	- changed: the C++ ECI implementation, the 
		   ECA_CONTROL_INTERFACE class, moved from libecasound
		   to libecasoundc; now also under LGPL
	- fixed: cleanup of curses/ncurses detection in configure.in;
		 this also fixes ecasound compilation on mandrake9.x
		 systems
31102002 (v2.2.0-pre4)
	- edi-entries: edi-27, edi-28, edi-29, edi-30
	- added: eiam - commands 'map-cop-list', 'map-ctrl-list', 
		 'map-ladspa-list' and 'map-preset-list'; see 
		 ecasound-iam(1) man page for details
	- added: eiam - 'ao-add-default' command
	- added: ecicpp_tester, a unit test program for C++ ECI
	- changed: libecasoundc now LGPL licensed
	- changed: edi-30 done; ecaplay, ecaconvert, ecafixdc and 
	 	   ecanormalize rewritten using the new standalone
	 	   ECI api